--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
         <main class="main">
             КОНТЕНТ
         </main>
+
+        <footer class="footer">
+            <h1>ПОДВАЛ САЙТА</h1>
+        </footer>
     </body>
 </html>
