--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </main>
 
         <footer class="footer">
-            <h1>ПОДВАЛ САЙТА</h1>
+            ПОДВАЛ САЙТА
         </footer>
     </body>
 </html>
