add-footer-menu

--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
         </header>
 
         <main class="main">
-            КОНТЕНТ
+            <h2>Основной Контент</h2>
         </main>
 
         <footer class="footer">
             ПОДВАЛ САЙТА
+            <ul>
+                <li><a href="#!">Пункт меню</a></li>
+                <li><a href="#!">Пункт меню</a></li>
+                <li><a href="#!">Пункт меню</a></li>
+            </ul>
         </footer>
     </body>
 </html>
