--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 
         <footer class="footer">
             ПОДВАЛ САЙТА
+
+            <ul>
+                <li><a href="#!">Пункт меню</a></li>
+                <li><a href="#!">Пункт меню</a></li>
+                <li><a href="#!">Пункт меню</a></li>
+            </ul>
         </footer>
     </body>
 </html>
